// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`auth:login succeeds when no organization flag is passed, and uses the first available org instead 1`] = `
"  console.error
     ›   Warning: NodeJS v20.8.0 is not supported. The Coveo CLI might malfunction.
     ›   Please update your NodeJS installation to the latest LTS version.

      4 | const hook: Hook<'prerun'> = function () {
      5 |   if (!satisfies(process.version, this.config.pjson.engines.node)) {
    > 6 |     this.warn(
        |          ^
      7 |       dedent\`NodeJS \${process.version} is not supported. The Coveo CLI might malfunction.
      8 |       Please update your NodeJS installation to the latest LTS version.\`
      9 |     );

      at warn (../../../node_modules/@oclif/core/lib/errors/index.js:59:13)
      at Object.warn (../../../node_modules/@oclif/core/lib/config/config.js:227:39)
      at Object.warn (src/hooks/prerun/checkNodeVersion.ts:6:10)
      at ../../../node_modules/@oclif/core/lib/config/config.js:238:46
          at async Promise.all (index 0)
      at Config.runHook (../../../node_modules/@oclif/core/lib/config/config.js:248:9)
      at Config.runCommand (../../../node_modules/@oclif/core/lib/config/config.js:271:9)
      at Object.run (../../../node_modules/@oclif/test/lib/command.js:21:28)
      at Object.run (../../../node_modules/fancy-test/lib/base.js:68:25)


    Successfully logged in!
    Close your browser to continue.

    You are currently logged in:
    Organization: the_first_org_available
    Region: us
    Environment: prod
    
To change organization, run coveo auth:login --help to see the available options to log in to a different organization, region, or environment.
"
`;

exports[`auth:login succeeds when organization flag is valid 1`] = `
"  console.error
     ›   Warning: NodeJS v20.8.0 is not supported. The Coveo CLI might malfunction.
     ›   Please update your NodeJS installation to the latest LTS version.

      4 | const hook: Hook<'prerun'> = function () {
      5 |   if (!satisfies(process.version, this.config.pjson.engines.node)) {
    > 6 |     this.warn(
        |          ^
      7 |       dedent\`NodeJS \${process.version} is not supported. The Coveo CLI might malfunction.
      8 |       Please update your NodeJS installation to the latest LTS version.\`
      9 |     );

      at warn (../../../node_modules/@oclif/core/lib/errors/index.js:59:13)
      at Object.warn (../../../node_modules/@oclif/core/lib/config/config.js:227:39)
      at Object.warn (src/hooks/prerun/checkNodeVersion.ts:6:10)
      at ../../../node_modules/@oclif/core/lib/config/config.js:238:46
          at async Promise.all (index 0)
      at Config.runHook (../../../node_modules/@oclif/core/lib/config/config.js:248:9)
      at Config.runCommand (../../../node_modules/@oclif/core/lib/config/config.js:271:9)
      at Object.run (../../../node_modules/@oclif/test/lib/command.js:21:28)
      at Object.run (../../../node_modules/fancy-test/lib/base.js:68:25)


    Successfully logged in!
    Close your browser to continue.

    You are currently logged in:
    Organization: foo
    Region: us
    Environment: prod
    
To change organization, either:
  • Run coveo auth:login --help to see the available options to log in to a different organization, region, or environment.
  • Run coveo config:set -o=theOtherOrg to run the next commands against theOtherOrg.
"
`;
